feature aplicando contabilidad
Se realiza ajuste para poder cambiar de usuario este en recuerdame o no,
lo que hace es cerrrar el stage del template y abrir el stave de login y
poderlo otra realizar login con otro usuario