@@ -7,6 +7,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.pyt.common.annotations.Singleton;
@@ -151,7 +152,7 @@ public class Comunicacion<IC extends IComunicacion> implements Runnable {
 					T[] ss = (T[]) lSubscribers.toArray(new IComunicacion[0]);
 					suscriptores.put(comando, (IC[]) ss);
 				} else if (subscribers != null || subscribers.length > 0) {
-					List<T> lSubscribers = List.of(subscribers);
+					List<T> lSubscribers = Arrays.asList(subscribers).stream().collect(Collectors.toList());
 					lSubscribers.add(subscriber);
 					suscriptores.put(comando, (IC[]) lSubscribers.toArray(new IComunicacion[0]));
 				}
